# orthography

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
assets/manifests/: stimuli-manifest.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  routes_admin.py  routes_participants.py
backend/app/core/: __init__.py  config.py  exporters.py  learning.py  schedule.py  security.py  stimuli.py
backend/app/core/domains/: __init__.py  grid.py  logo.py  lsystem.py  objects.py  shapes.py
backend/app/db/: models.py  repository.py  session.py
backend/app/schemas/: __init__.py  contracts.py
backend/app/services/: runtime.py  session_manager.py
backend/app/tests/: __init__.py  test_api_smoke.py  test_exporters.py  test_learning.py  test_schedule.py  test_stimuli.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: generate-types.mjs
frontend/src/: main.tsx
frontend/src/app/: router.tsx
frontend/src/components/: AppShell.tsx  CanvasStateRenderer.tsx  CompositionWorkspace.tsx  DesktopGuard.tsx  EtchASketchWorkspace.tsx  HistoryStrip.tsx  InertialWorkspace.tsx  PendulumWorkspace.tsx  ReferentGrid.tsx  SeismographWorkspace.tsx  SignalWorkspace.tsx  TelegraphWorkspace.tsx  TopBar.tsx
frontend/src/hooks/: useBootstrap.ts  useParticipantSocket.ts
frontend/src/lib/: api.ts  helpers.ts
frontend/src/pages/: AdminPage.tsx  CompletionPage.tsx  DebriefPage.tsx  GamePage.tsx  (+5 more)
scripts/: generate_assets.py
(+5 files in other folders)
