[project]
name = "symbol-games-backend"
version = "0.1.0"
description = "FastAPI backend for the Symbol Games multiplayer orthography experiment."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "sqlalchemy>=2.0.35,<3.0.0",
  "uvicorn[standard]>=0.31.0,<1.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "alembic>=1.13.2,<2.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<1.0.0",
  "pytest>=8.3.3,<9.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
